@@ -25,6 +25,7 @@
 ::msgcat::mcset ru "Comments" "Коментарии"
 ::msgcat::mcset ru "Comment selected" "Закоментировать"
 ::msgcat::mcset ru "Uncomment selected" "Раскоментировать"
+::msgcat::mcset ru "Column" "Столбец"
 ::msgcat::mcset ru "Company" "Компания"
 ::msgcat::mcset ru "Compiler" "Компилятор"
 ::msgcat::mcset ru "Compile" "Компиляция"
@@ -153,6 +154,7 @@
 ::msgcat::mcset ru "Release" "Выпуск"
 ::msgcat::mcset ru "RPM directory" "Каталог RPM"
 ::msgcat::mcset ru "RPM file mask" "Маска RPM"
+::msgcat::mcset ru "Row" "Строка"
 ::msgcat::mcset ru "Run" "Выполнить"
 ::msgcat::mcset ru "Run file" "Запустить файл"
 ::msgcat::mcset ru "Running project" "Выполнение проекта"
@@ -185,10 +187,9 @@
 ::msgcat::mcset ru "Version" "Версия"
 ::msgcat::mcset ru "View" "Вид"
 ::msgcat::mcset ru "View files tree" "Показывать дерево файлов"
-::msgcat::mcset ru "View line numers" "Показывать номера строк"
+::msgcat::mcset ru "View line numbers" "Показывать номера строк"
 ::msgcat::mcset ru "Warning" "Внимание"
 ::msgcat::mcset ru "Was replacement" "Было заменено"
 ::msgcat::mcset ru "Word wrapping" "Перенос слов"
 ::msgcat::mcset ru "Work dir" "Рабочий каталог"
 ::msgcat::mcset ru "Yes" "Да"
-
